--- a/data/sites.yml
+++ b/data/sites.yml
@@ -318,6 +318,8 @@ built:
   - url: https://www.ecommwar.com/
     title: eCommWar - Top Open-Source E-Commerce Platforms
     source: https://github.com/ecommwar/ecommwar
+  - url: https://www.simpleloans.ca
+    title: SimpleLoans.ca
 
 mobile:
   - url: http://pollev.com
