Add WMF Transparency Report to 'build using Middleman' list

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://transparency.wikimedia.org/
+    title: Wikimedia Foundation Transparency Report
   - url: http://dev.welaika.com
     title: weLaika Software Development
   - url: http://www.beerfestivalbuddy.com
