Added Word Counter (https://wordcounter.io)

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://wordcounter.io
+    title: Word Counter
   - url: http://dev.welaika.com
     title: weLaika Software Development
   - url: http://www.beerfestivalbuddy.com
