--- a/data/sites.yml
+++ b/data/sites.yml
@@ -484,3 +484,5 @@ blogs:
   - url: https://www.opensourcery.co.za
     title: Open Sourcery by Kenneth Kalmer
     source: https://github.com/kennethkalmer/opensourcery.co.za
+  - url: https://supermercadosgrupal.com.uy
+    title: Supermarkets Grupal
