Add WMF Transparency Report to 'build using Middleman' list (#707)

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://transparency.wikimedia.org/
+    title: Wikimedia Foundation Transparency Report
   - url: https://wordcounter.io
     title: Word Counter
   - url: http://dev.welaika.com
