--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://www.skcript.com/
+    title: Skcript - Design and AI
   - url: https://transparency.wikimedia.org/
     title: Wikimedia Foundation Transparency Report
   - url: https://wordcounter.io
