Added Skcript to Sites

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -4,6 +4,8 @@ built:
     source: https://github.com/alexanderbartels/jet-website
   - url: https://pochertmedia.com
     title: "Software-Firma für digitale Individual-Lösungen aus Köln"
+  - url: https://www.skcript.com/
+    title: Skcript - Design and AI
   - url: https://transparency.wikimedia.org/
     title: Wikimedia Foundation Transparency Report
   - url: https://wordcounter.io
