add Henkubao to built sites

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -90,6 +90,8 @@ built:
   - url: http://thisiscapra.com/
     title: "Capra Design"
     source: https://github.com/thisiscapra/thisiscapra.com
+  - url: https://henkubao.com/
+    title: "Henkubao"
   - url: http://hiphopquoted.com/
     title: "Hip-Hop Quoted"
     source: https://github.com/olliekav/hiphopquoted.com
