--- a/data/sites.yml
+++ b/data/sites.yml
@@ -506,3 +506,6 @@ blogs:
   - url: http://OFReport.com
     title: Our family blog, documenting our work in Ukraine.
     source: https://github.com/joshukraine/ofreport.com
+  - url: http://blog.wildsky.cc
+    title: "ws://wildsky.cc"
+    source: https://github.com/wildskyf/blog.wildsky.cc
