Added Chinese New Year 2018 to sites.yml

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://chinesenewyear2018.com
+    title: Chinese New Year 2018
   - url: https://jet.js.org
     title: Jet.js Open Source Library
     source: https://github.com/alexanderbartels/jet-website
