Adding Livestorm to sites list

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,6 +1,8 @@
 built:
   - url: https://chinesenewyear2018.com
     title: Chinese New Year 2018
+  - url: https://livestorm.co/
+    title: Livestorm - Better Webinar Software
   - url: https://jet.js.org
     title: Jet.js Open Source Library
     source: https://github.com/alexanderbartels/jet-website
