Add Startup Heroes to site list

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://www.startupheroes.co.uk
+    title: Startup Heroes
   - url: https://chinesenewyear2018.com
     title: Chinese New Year 2018
   - url: https://livestorm.co/
