Add Startup Heroes to site list

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://www.startupheroes.co.uk
+    title: Startup Heroes
   - url: https://jet.js.org
     title: Jet.js Open Source Library
     source: https://github.com/alexanderbartels/jet-website
