Add sites I built in Middleman

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,8 @@
 built:
+  - url: https://donttaketherisk.org
+    title: Don't Take the Risk (Opioid addiction awareness campaign, Philadelphia Department of Public Health)
+  - url: https://beachbanners.com
+    title: Beach Banners (Aerial advertising company based in Jacksonville, Florida)
   - url: https://www.startupheroes.co.uk
     title: Startup Heroes
   - url: https://chinesenewyear2018.com
