--- a/data/sites.yml
+++ b/data/sites.yml
@@ -1,4 +1,6 @@
 built:
+  - url: https://gpacalculator.io
+    title: GPA Calculator
   - url: https://cssgradient.io/
     title: CSS Gradient
   - url: https://donttaketherisk.org
