Add Bastien Robert website to sites.yml (#755)

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -551,3 +551,5 @@ blogs:
     title: Moe Amaya — Product Designer in San Francisco
   - url: https://www.livechatlabs.com/
     title: Live Chat Labs
+  - url: https://bastienrobert.fr
+    title: Bastien Robert - Creative developer from Paris
