--- a/data/sites.yml
+++ b/data/sites.yml
@@ -360,6 +360,8 @@ built:
     title: "Affirm"
   - url: https://docs.mapwize.io
     title: "Mapwize - Indoor mapping platform | Support Center"
+  - url: https://www.aaimaa.in
+    title: "Aaimaa Web Solutions"
 
 mobile:
   - url: http://pollev.com
