Adding Bundlify to sites built with list

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -362,6 +362,8 @@ built:
     title: "Mapwize - Indoor mapping platform | Support Center"
   - url: https://www.aaimaa.in
     title: "Aaimaa Web Solutions"
+  - url: https://www.bundlify.com/
+    title: "Bundlify - Send professional invoices and get paid online"
 
 mobile:
   - url: http://pollev.com
