Adding my site to the sites.yml file
Just adding my site to the sites using Middleman section. Absolutely love Middleman, keep up the great work!

--- a/data/sites.yml
+++ b/data/sites.yml
@@ -566,3 +566,6 @@ blogs:
     title: Live Chat Labs
   - url: https://bastienrobert.fr
     title: Bastien Robert - Creative developer from Paris
+  - url: https://cameronbroe.com
+    title: Cameron Roe - Software engineer from Memphis, TN
+    source: https://github.com/cameronbroe/cameronbroe-com
